test/libsolidity/syntaxTests/literalSuffixes/application/invalid_suffixed_string_multipart_concatenation.sol
function suffix(string memory) pure suffix returns (string memory) {}

contract C {
    string s = "abcd" suffix "abcd" suffix;
}
// ----
// ParserError 2314: (113-119): Expected ';' but got 'StringLiteral'
